# rust_data_practice

./: .gitignore  README.md
.zed/: settings.json
json_structure/: .env  Cargo.toml
json_structure/data/: above_three_days.json  clients.json  in_between.json  timers.json  under_two_hours.json
json_structure/src/: clients.rs  data.rs  main.rs  organizers.rs  time_parked.rs  timers.rs
sqlite_structure/: .env  Cargo.toml  schema.sql
sqlite_structure/data/: parkinglot.db
sqlite_structure/src/: clients.rs  data.rs  db.rs  main.rs  timers.rs
