[package]
name = "sql_structure"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
dotenvy = "0.15.7"
rand = "0.10.2"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.52.3", features = ["full"] }
# rusqlite = { version = "0.40.1", features = ["bundled"] }
